# termlib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindErlang.cmake  common.cmake
examples/: CMakeLists.txt  read_term.cpp  term.h  write_term.cpp
include/erlterm/: read.hpp  write.hpp
include/erlterm/core/: defs.hpp  reflect.hpp  types.hpp
include/erlterm/ei/: ei.hpp  read.hpp  types.hpp  write.hpp
include/erlterm/utils/: cmp.hpp
include/termlib/: Exception.h  TermBuilder.h  TermParser.h
src/: Exception.cpp  TermBuilder.cpp  TermParser.cpp  cmp.h
tests/: CMakeLists.txt  ExpectThrowParserError.h  ExpectThrowSystemError.h  ParserIteratorTests.cpp  TermBuilderTests.cpp  TermParserTests.cpp  read.cpp
